--- a/templates/profile.html
+++ b/templates/profile.html
@@ -61,22 +61,12 @@
                 <div class="mb-3">
                     <label for="allergies" class="form-label">Allergies</label>
                     <div id="allergies">
+                        {% for allergy in allergies_list %}
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="allergies" value="nuts" id="allergy_nuts" {% if 'nuts' in current_user.allergies %}checked{% endif %}>
-                            <label class="form-check-label" for="allergy_nuts">Nuts</label>
+                            <input class="form-check-input" type="checkbox" name="allergies" value="{{ allergy }}" id="allergy_{{ allergy }}" {% if allergy in current_user.allergies %}checked{% endif %}>
+                            <label class="form-check-label" for="allergy_{{ allergy }}">{{ allergy }}</label>
                         </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="allergies" value="dairy" id="allergy_dairy" {% if 'dairy' in current_user.allergies %}checked{% endif %}>
-                            <label class="form-check-label" for="allergy_dairy">Dairy</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="allergies" value="gluten" id="allergy_gluten" {% if 'gluten' in current_user.allergies %}checked{% endif %}>
-                            <label class="form-check-label" for="allergy_gluten">Gluten</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="allergies" value="shellfish" id="allergy_shellfish" {% if 'shellfish' in current_user.allergies %}checked{% endif %}>
-                            <label class="form-check-label" for="allergy_shellfish">Shellfish</label>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Update Profile</button>
