--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
                         <a class="nav-link" href="{{ url_for('recipes.upload_recipe') }}">Upload Recipe</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('favorites.view_favorites') }}">Favorites</a>                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('profile.view_profile') }}">Profile</a>
                     </li>
                 </ul>
@@ -35,5 +37,6 @@
         {% block content %}{% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
 </html>
