--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('swipe.swipe_view') }}">Swipe</a>
                     </li>
@@ -25,10 +25,25 @@
                         <a class="nav-link" href="{{ url_for('recipes.upload_recipe') }}">Upload Recipe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('favorites.view_favorites') }}">Favorites</a>                    </li>
+                        <a class="nav-link" href="{{ url_for('favorites.view_favorites') }}">Favorites</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('profile.view_profile') }}">Profile</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
